--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="description" content="Proyecto de la primera pagina que voy hacer bien"/>
+	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
+
 	<title>Ejemplo Vamos si se puede</title>
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
+	<script>
+		src="prefixfree.js"
+
+	</script>
+
 </head>
 <body>
 	<header>
@@ -28,9 +35,24 @@
 			<li><a href="#">Javascript</a></li>
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
-			<li id="publicar_nav"><a href="#" class="icon-pen">Publicar</a></li>
+			<li id="publicar_nav"><a href="#" id="mostrar-form" class="icon-pen">Publicar</a></li>
 		</ul>
 	</nav>
+	<form action="" id="formulario" class="formulario">
+		
+		<input type="text" id="titulo" placeholder="Titulo" required>
+		<input type="text" id="url" placeholder="Link" required>
+		<input type="submit" value="Agregar">
+
+	</form>
+
+	<aside>
+		<video width="320" height="240" controls autoplay>
+			<source src="videos/lecturas.mp4" type="video/mp4">
+			<source src="videos/lecturas.ogg" type="video/ogg">
+		</video>	
+	</aside>
+	
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
@@ -191,5 +213,9 @@
 			hopped 2016
 		</p>
 	</footer>
+
+	<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
+	<script type="text/javascript" src="alert.js"></script>
+
 </body>
 </html>
