--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Ejemplo Vamos si se puede</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
 	<script>
@@ -216,6 +216,13 @@
 
 	<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
 	<script type="text/javascript" src="alert.js"></script>
+	
+	<script>
+		$(function(){
+			//console.log('Ya se disparo el DOMContentLoaded');
 
+			
+		});
+	</script>
 </body>
 </html>
