--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 		<input type="submit" value="Agregar">
 
 	</form>
-
+	
 	<aside>
+		<div id="geo"></div>
 		<video width="320" height="240" controls autoplay>
 			<source src="videos/lecturas.mp4" type="video/mp4">
 			<source src="videos/lecturas.ogg" type="video/ogg">
@@ -216,11 +217,14 @@
 
 	<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
 	<script type="text/javascript" src="alert.js"></script>
-	
+	<script src="geo.js"></script>
+	<script type="text/javascript" src="ajax.js"></script>
+
+
 	<script>
 		$(function(){
 			//console.log('Ya se disparo el DOMContentLoaded');
-
+			
 			
 		});
 	</script>
