--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			Puls2014: Comunidad de personas atractivas y millonarias
 		</h1>
 		<figure id="avatar">
-			<img src="avatar.jpg"/>
+			
 		</figure>
 	</header>
 	<nav>
@@ -213,6 +213,7 @@
 		<p>
 			hopped 2016
 		</p>
+		<div class="logos"></div>
 	</footer>
 
 	<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
